# resa

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/src/main/cpp/multiplayer/: CDebugInfo.cpp  CDebugInfo.h  CFPSFix.cpp  CFPSFix.h  CLoader.cpp  CLoader.h  CLocalisation.cpp  CLocalisation.h  CMakeLists.txt  CSettings.cpp  CSettings.h  LoadedCarGroup.cpp  LoadedCarGroup.h  SkyBox.cpp  SkyBox.h  chatwindow.cpp  chatwindow.h  keyboard.cpp  keyboard.h  keyboardhistory.cpp  keyboardhistory.h  main.cpp  main.h  nv_event.cpp  playertags.cpp  playertags.h  str_obfuscator.hpp
app/src/main/cpp/multiplayer/ResourceCrypt/: Header.h  ResourceCrypt.cpp  ResourceCrypt.h
app/src/main/cpp/multiplayer/app/: OS_wrapper.cpp  OS_wrapper.h  app.cpp  app.h  app_camera.cpp  app_game.cpp  app_game.h  app_light.cpp  app_light.h
app/src/main/cpp/multiplayer/game/: 3dMarkers.cpp  3dMarkers.h  AudioStream.cpp  AudioStream.h  Birds.cpp  Birds.h  BouncingPanel.h  BrightLights.cpp  BrightLights.h  CActorPed.cpp  CActorPed.h  CCustomPlateManager.cpp  CCustomPlateManager.h  CFileMgr.cpp  CFileMgr.h  CFirstPersonCamera.cpp  CFirstPersonCamera.h  CHandlingDefault.cpp  CPad.cpp  CPad.h  CPlayerInfoGta.h  CRenderTarget.cpp  CRenderTarget.h  CWeaponsOutFit.cpp  CWeaponsOutFit.h  Cam.cpp  Cam.h  Camera.cpp  Camera.h  CarEnterExit.cpp  CarEnterExit.h  CdStreamInfo.cpp  CdStreamInfo.h  Clock.cpp  Clock.h  Clouds.cpp  Clouds.h  ColourSet.cpp  ColourSet.h  Coronas.cpp  (+155 more)
app/src/main/cpp/multiplayer/graphics/: ES2VertexBuffer.cpp  ES2VertexBuffer.h  RQShader.cpp  RQShader.h  RQVertexBuffer.h  RQ_Commands.cpp  RQ_Commands.h
app/src/main/cpp/multiplayer/gui/: CircleMenu.cpp  CircleMenu.h  GiftNotify.cpp  GiftNotify.h  VehiclePipeMenu.cpp  VehiclePipeMenu.h  gui.cpp  gui.h  imgui_impl_renderware.cpp
app/src/main/cpp/multiplayer/java_systems/: Achivments.cpp  Achivments.h  AdminRecon.cpp  AdminRecon.h  ArmyGame.cpp  ArmyGame.h  AucContainer.cpp  AucContainer.h  AutoShop.cpp  (+86 more)
(+742 files in other folders)
